# sem

./: CMakeLists.txt  LICENSE  README.md
cmake/: DetectELM.cmake
docs/: doxygenConf.txt
modules/sem/layers/: CMakeLists.txt  layer_y.cpp  layer_y.h  layer_z.cpp  layer_z.h  layerfactory.cpp  layerfactory.h  layerfactorysem.cpp  layerfactorysem.h
modules/sem/layers/test/: layer_y_unittests.cpp  layer_z_unittests.cpp  layerfactory_unittests.cpp  layerfactorysem_unittests.cpp
modules/sem/neuron/: wtapoisson.cpp  wtapoisson.h  zneuron.cpp  zneuron.h
modules/sem/neuron/test/: wtapoisson_unittests.cpp  z_neuron_unittests.cpp
samples/SEM_NIPS_2010/: simulationsem.cpp  simulationsem.h
samples/hierarchical_SEM/: sim_hierarchical_sem.cpp  simulationhsem.cpp  simulationhsem.h
